# h-state-linear-probe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test.py
src/: __init__.py  config.py  data.py  inference.py  metrics.py  plot.py  probe.py
